I fixed problems with overflow on x with the css, the js file got minor tweaks I think, I belive I forgot to push yesterday, Working Edition

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
 [contenteditable] {
    outline: 0px solid transparent;
+   overflow-y: hidden;
+   overflow-x: hidden;
+   height: 100vh;
 }
